<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/bmi_calculator"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/ed_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_heading"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_with_rounded_border"
        android:hint="@string/enter_your_weigh_in_kg"
        android:padding="10dp" />


    <RelativeLayout
        android:id="@+id/layout_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_weight"
        android:layout_margin="40dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_height_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="100"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/tv_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_height_value"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/height_in_cm"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/height_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_height_label"
            android:layout_marginTop="15dp"
            android:max="200"
            android:progress="50"
            android:progressTint="@color/black"
            android:thumb="@drawable/seekbar_thumb" />
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result_view"
        android:text="@string/result"
        android:textSize="24sp"
        android:padding="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/layout_height"
        android:textAlignment="center"
        android:background="@color/green"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calculate_bmi"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="#4C9AD9"
        android:text="@string/calculate_bmi" />
</RelativeLayout>

